src/test/ui/regions/regions-proc-bound-capture.stderr
error[E0621]: explicit lifetime required in the type of `x`
  --> $DIR/regions-proc-bound-capture.rs:9:5
   |
LL | fn static_proc(x: &isize) -> Box<dyn FnMut()->(isize) + 'static> {
   |                   ------ help: add explicit lifetime `'static` to the type of `x`: `&'static isize`
LL |     // This is illegal, because the region bound on `proc` is 'static.
LL |     Box::new(move|| { *x })
   |     ^^^^^^^^^^^^^^^^^^^^^^^ lifetime `'static` required

error: aborting due to previous error

For more information about this error, try `rustc --explain E0621`.
